// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages stageNames should render correctly when a user first visits the page 1`] = `
<Layout
  description="Stage Names entry page of the Fares Data Build Tool"
  title="Stage Names - Fares Data Build Tool"
>
  <main
    className="govuk-main-wrapper app-main-class"
    id="main-content"
    role="main"
  >
    <form
      action="/api/stageNames"
      method="post"
    >
      <div
        className="govuk-form-group"
      >
        <fieldset
          aria-describedby="stage-names-input"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--xl"
          >
            <h1
              className="govuk-fieldset__heading"
            >
              Enter the names of the fare stages in order from first to last
            </h1>
            <p
              className="govuk-hint hint-text"
            >
              Fare stage names are limited to 30 characters
            </p>
          </legend>
          <div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName1"
              >
                Fare Stage 
                1
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName1"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName2"
              >
                Fare Stage 
                2
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName2"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName3"
              >
                Fare Stage 
                3
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName3"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName4"
              >
                Fare Stage 
                4
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName4"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName5"
              >
                Fare Stage 
                5
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName5"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName6"
              >
                Fare Stage 
                6
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                id="fareStageName6"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <input
        className="govuk-button govuk-button--start"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </form>
  </main>
</Layout>
`;

exports[`pages stageNames should render correctly when a user is redirected to the page from itself when incorrect data is entered 1`] = `
<Layout
  description="Stage Names entry page of the Fares Data Build Tool"
  title="Stage Names - Fares Data Build Tool"
>
  <main
    className="govuk-main-wrapper app-main-class"
    id="main-content"
    role="main"
  >
    <form
      action="/api/stageNames"
      method="post"
    >
      <div
        className="govuk-form-group"
      >
        <fieldset
          aria-describedby="stage-names-input"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--xl"
          >
            <h1
              className="govuk-fieldset__heading"
            >
              Enter the names of the fare stages in order from first to last
            </h1>
            <p
              className="govuk-hint hint-text"
            >
              Fare stage names are limited to 30 characters
            </p>
          </legend>
          <div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName1"
              >
                Fare Stage 
                1
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                defaultValue=""
                id="fareStageName1"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName2"
              >
                Fare Stage 
                2
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                defaultValue=""
                id="fareStageName2"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group govuk-form-group--error input-error"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName3"
              >
                Fare Stage 
                3
              </label>
              <span
                className="govuk-error-message"
                id="fareStageName3-error"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Error:
                </span>
                 
                Enter a name for this fare stage
              </span>
              <input
                aria-describedby="fareStageName3-error"
                className="govuk-input govuk-input--width-30 govuk-input--error stage-name-input-field"
                defaultValue=""
                id="fareStageName3"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName4"
              >
                Fare Stage 
                4
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                defaultValue=""
                id="fareStageName4"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName5"
              >
                Fare Stage 
                5
              </label>
              <input
                aria-describedby=""
                className="govuk-input govuk-input--width-30  stage-name-input-field"
                defaultValue=""
                id="fareStageName5"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <input
        className="govuk-button govuk-button--start"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </form>
  </main>
</Layout>
`;

exports[`pages stageNames should render correctly when a user is redirected to the page from itself when no data is entered 1`] = `
<Layout
  description="Stage Names entry page of the Fares Data Build Tool"
  title="Stage Names - Fares Data Build Tool"
>
  <main
    className="govuk-main-wrapper app-main-class"
    id="main-content"
    role="main"
  >
    <form
      action="/api/stageNames"
      method="post"
    >
      <div
        className="govuk-form-group"
      >
        <fieldset
          aria-describedby="stage-names-input"
          className="govuk-fieldset"
        >
          <legend
            className="govuk-fieldset__legend govuk-fieldset__legend--xl"
          >
            <h1
              className="govuk-fieldset__heading"
            >
              Enter the names of the fare stages in order from first to last
            </h1>
            <p
              className="govuk-hint hint-text"
            >
              Fare stage names are limited to 30 characters
            </p>
          </legend>
          <div>
            <div
              className="govuk-form-group govuk-form-group--error input-error"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName1"
              >
                Fare Stage 
                1
              </label>
              <span
                className="govuk-error-message"
                id="fareStageName1-error"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Error:
                </span>
                 
                Enter a name for this fare stage
              </span>
              <input
                aria-describedby="fareStageName1-error"
                className="govuk-input govuk-input--width-30 govuk-input--error stage-name-input-field"
                defaultValue=""
                id="fareStageName1"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group govuk-form-group--error input-error"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName2"
              >
                Fare Stage 
                2
              </label>
              <span
                className="govuk-error-message"
                id="fareStageName2-error"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Error:
                </span>
                 
                Enter a name for this fare stage
              </span>
              <input
                aria-describedby="fareStageName2-error"
                className="govuk-input govuk-input--width-30 govuk-input--error stage-name-input-field"
                defaultValue=""
                id="fareStageName2"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group govuk-form-group--error input-error"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName3"
              >
                Fare Stage 
                3
              </label>
              <span
                className="govuk-error-message"
                id="fareStageName3-error"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Error:
                </span>
                 
                Enter a name for this fare stage
              </span>
              <input
                aria-describedby="fareStageName3-error"
                className="govuk-input govuk-input--width-30 govuk-input--error stage-name-input-field"
                defaultValue=""
                id="fareStageName3"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
            <div
              className="govuk-form-group govuk-form-group--error input-error"
            >
              <label
                className="govuk-label"
                htmlFor="fareStageName4"
              >
                Fare Stage 
                4
              </label>
              <span
                className="govuk-error-message"
                id="fareStageName4-error"
              >
                <span
                  className="govuk-visually-hidden"
                >
                  Error:
                </span>
                 
                Enter a name for this fare stage
              </span>
              <input
                aria-describedby="fareStageName4-error"
                className="govuk-input govuk-input--width-30 govuk-input--error stage-name-input-field"
                defaultValue=""
                id="fareStageName4"
                maxLength={30}
                name="stageNameInput"
                type="text"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <input
        className="govuk-button govuk-button--start"
        id="continue-button"
        type="submit"
        value="Continue"
      />
    </form>
  </main>
</Layout>
`;
